--- a/projects/smart-reminder-system/web-demo/index.html
+++ b/projects/smart-reminder-system/web-demo/index.html
@@ -27,6 +27,7 @@
             </section>
 
             <section class="health-dashboard" id="healthDashboard" style="display: none;">
+                <div class="data-source-indicator" id="dataSourceIndicator" style="text-align: center; margin-bottom: 20px;"></div>
                 <h3>📊 Your Health Summary</h3>
                 <div class="metrics-grid">
                     <div class="metric-card">
@@ -177,6 +178,7 @@ node src/demo-sleep-notifications.js</code></pre>
         </footer>
     </div>
 
+    <script src="real-data-api.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
